--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,11 +40,11 @@
     </h2>
     
     <!-- Lighter horizontal line -->
-    <div style="height: 2px; width: 90vw; background: #f8f8f8; margin: 30px 0 5px 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%); border: none; margin-bottom: 40px"></div>
+    <div style="height: 4px; width: 90vw; background: #f8f8f8; margin: 30px 0 5px 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%); border: none; margin-bottom: 40px"></div>
 
     <!-- Outer box with lighter border -->
     <div class="light-border" style="
-	border: 2px solid #ccd0d2;
+	border: 5px solid #ccd0d2;
         border-radius: 22px;
         background: #fff;
         padding: 25px 50px;
@@ -54,7 +54,7 @@
     >
     <div class="row row-cols-1 row-cols-md-3 g-0" style="margin:0;">
         {% for dept in departments %}
-            <div class="col d-flex justify-content-center" style="padding: 10px 4px; border-width:3px;">
+            <div class="col d-flex justify-content-center" style="padding: 10px 4px;">
                 <a href="{{ url_for('modules', dept=dept.key) }}" style="text-decoration:none;">
                   <div class="card dashboard-tile d-flex align-items-center justify-content-center" style="width: 210px; height: 150px; border: 2px solid #888A90; border-radius:20px; box-shadow: none; margin: 0;">
                         {% if dept.icon == 'edd.jpeg' or dept.icon == 'ranchocordova.jpeg' %}
