--- a/templates/login.html
+++ b/templates/login.html
@@ -59,14 +59,14 @@
             </div>
 
             <div class="form-check mt-2">
-                <input class="form-check-input" type="checkbox" id="guardrails">
+                <input class="form-check-input" type="checkbox" id="guardrails" checked="true">
                 <label class="form-check-label" for="guardrails" style="font-size:0.93rem;">
                 Enable Guardrails
                 </label>
             </div>
 
             <div class="form-check mt-1">
-                <input class="form-check-input" type="checkbox" id="roll-level-security">
+                <input class="form-check-input" type="checkbox" id="roll-level-security" checked="true">
                 <label class="form-check-label" for="roll-level-security" style="font-size:0.93rem;">
                 Enable Roll Level Security
                 </label>
