checking the boxes

--- a/templates/login.html
+++ b/templates/login.html
@@ -59,17 +59,17 @@
             </div>
 
             <div class="form-check mt-2">
-                <input class="form-check-input" type="checkbox" id="guardrails" checked="true">
+                <input class="form-check-input" type="checkbox" id="guardrails" checked>
                 <label class="form-check-label" for="guardrails" style="font-size:0.93rem;">
-                Enable Guardrails
+                  Enable Guardrails
                 </label>
             </div>
 
             <div class="form-check mt-1">
-                <input class="form-check-input" type="checkbox" id="roll-level-security" checked="true">
-                <label class="form-check-label" for="roll-level-security" style="font-size:0.93rem;">
-                Enable Roll Level Security
-                </label>
+            <input class="form-check-input" type="checkbox" id="roll-level-security" checked>
+            <label class="form-check-label" for="roll-level-security" style="font-size:0.93rem;">
+              Enable Roll Level Security
+            </label>
             </div>
 
         </div>
