--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,7 @@
 <!-- Page Content -->
 <div class="container py-5">
     <!-- Title with new color -->
-    <h2 class="text-center dark-blue-text" style="font-size:2.3rem; border=2px; font-weight:700; margin-top: 25px; margin-bottom:35px; letter-spacing: -0.5px;">
+    <h2 class="text-center dark-blue-text" style="font-size:2.3rem; border:2px; font-weight:700; margin-top: 25px; margin-bottom:35px; letter-spacing: -0.5px;">
         Pretrained, Domain-Tuned AI Agents for the Public Sector
     </h2>
     
