--- a/templates/modules.html
+++ b/templates/modules.html
@@ -35,9 +35,16 @@
 <!-- Page Content -->
 <div class="container py-5">
   <!-- Main Title and Subtitle -->
+
+  <div class="text-center">
+    <img src="{{ url_for('static', filename='icons/' + company_icon) }}" alt="Company Logo" class="company-logo" style="width:50%;height:50%;">
+  </div>
+  
   <h2 class="text-center dark-blue-text modules-title" style="font-size:2.3rem; font-weight:700; margin-top: 25px; margin-bottom:35px; letter-spacing: -0.5px;">
         Enterprise Orchestration Suite
-    </h2>
+  </h2>
+  <!-- Lighter horizontal line -->
+    <div class="horizontal-line" style="height: 4px; width: 90vw; background: #f8f8f8; margin: 30px 0 5px 0; position: relative; left: 50%; right: 50%; transform: translateX(-50%); border: none; margin-bottom: 40px"></div>  
 
     <!-- Outer container with border (similar to your sample) -->
     <div class="light-border modules-container" style="
