--- a/templates/modules.html
+++ b/templates/modules.html
@@ -68,7 +68,7 @@
             ] %}
 
             {% for module in modules %}
-            <div class="module-item">
+            <div class="module-item dashboard-tile">
                 <a href="{{ url_for(module.route) }}" class="text-decoration-none">
                     <div class="card module-card text-center">
                         <div class="card-body d-flex flex-column align-items-center justify-content-center">
